test/mutation_analysis/s0128_longest_consecutive_sequence/hafis/o3/mutants/11/result.txt
./test/mutation_analysis/s0128_longest_consecutive_sequence/hafis/o3/mutants/11/Solution.java:26: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
